Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -35,16 +35,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State you null and alternative hypotheses\n"
+    "# State you null and alternative hypotheses\n",
+    "# H0: mu = 60\n",
+    "# h1: mu > 60"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z-score:  3.0\n",
+      "p-score:  0.0013498980316301035\n"
+     ]
+    }
+   ],
    "source": [
     "# Your solution here\n",
+    "import math\n",
+    "import scipy.stats as stats\n",
+    "alpha = 0.05\n",
+    "x_bar = 75\n",
+    "mu = 60\n",
+    "sigma = 30\n",
+    "n = 36\n",
+    "\n",
+    "z = (x_bar-mu)/(sigma/math.sqrt(n))\n",
+    "print(\"z-score: \", z)\n",
+    "\n",
+    "p = 1-stats.norm.cdf(z)\n",
+    "print(\"p-score: \", p)\n",
     "\n",
     "\n",
     "# (p = 0.0013498980316301035, z = 3.0)"
@@ -52,12 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Interpret the results in terms of p-value obtained\n",
-    "\n"
+    "# p-value is much lower than alpha (0.05) so we must reject the null hypothesis"
    ]
   },
   {
@@ -85,22 +109,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State your hypotheses \n"
+    "# State your hypotheses \n",
+    "# H0: mu  = sample mean\n",
+    "# Ha: mu < sample mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p=  0.03593031911292577\n",
+      "z=  1.8\n"
+     ]
+    }
+   ],
    "source": [
     "# Give your solution here \n",
     "\n",
+    "sample = [434, 694, 457, 534, 720, 400, 484, 478, 610, 641, 425, 636, 454, 514, 563, 370, 499, 640, 501, 625, 612, 471, 598, 509, 531]\n",
+    "n = len(sample)\n",
+    "x_bar = sum(sample)/n\n",
+    "mu = 500\n",
+    "sigma = 100\n",
     "\n",
+    "z = (x_bar - mu)/(sigma/ math.sqrt(n))\n",
+    "z\n",
+    "\n",
+    "p = 1-stats.norm.cdf(z)\n",
+    "\n",
+    "print(\"p= \", p)\n",
+    "print(\"z= \", z)\n",
     "\n",
     "# p = 0.03593031911292577, z = 1.8"
    ]
@@ -111,7 +158,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret the results in terms of p-value obtained\n"
+    "# Interpret the results in terms of p-value obtained\n",
+    "# p value is less than the alpha therefore the chances that we obtained the results in the sample by chance\n",
+    "# is very low (lower than what we are willing to accept as the null) meaning we must reject the null hypothesis"
    ]
   },
   {
@@ -122,13 +171,6 @@
     "\n",
     "In this lesson, we conducted a couple of simple tests comparing sample and population means, in an attempt to reject our null hypotheses. This provides you with a strong foundation to move ahead with more advanced tests and approaches in statistics. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -147,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
